--- a/setup.cfg
+++ b/setup.cfg
@@ -7,21 +7,27 @@ classifiers =
 
 [options]
 install_requires = 
-    ensure==1.0.2
-    py-youtube==1.1.7
-python_requires = >=3.11
+    pandas
+    scikit-learn
+    numpy
+    seaborn 
+    flask
+    mlflow
+    dvc
+    xgboost
+    ipykernel
 
 
 [options.extras_require]
 testing =
     pytest>=7.1.3
-    mypy>=0.971
-    flake8>=5.0.4
     tox>=3.25.1
     black>=22.8.0
+    flake>=5.0.4
+    mypy>=0.971
 
-[options.package_data]
-mongodb_crud_automation=py.typed
+# [options.package_data]
+# mongodb_crud_automation=py.typed
 
 [flake8]
 max-line-length = 160
